--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,140 @@
     transform: rotate(360deg);
   }
 }
+
+.calc {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+
+  background-color: #fbb034;
+  padding: 1%;
+  height: 88%;
+  position: absolute;
+  top: 0%;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  font-size: 30px;
+  margin: 2%;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 5;
+}
+.div2 {
+  grid-area: 3 / 1 / 4 / 2;
+  margin: 1%;
+}
+.div3 {
+  grid-area: 3 / 2 / 4 / 3;
+  margin: 1%;
+}
+.div4 {
+  grid-area: 3 / 3 / 4 / 4;
+  margin: 1%;
+}
+.div5 {
+  grid-area: 3 / 4 / 4 / 5;
+  margin: 1%;
+}
+.div6 {
+  grid-area: 4 / 4 / 5 / 5;
+  margin: 1%;
+}
+.div7 {
+  grid-area: 5 / 4 / 6 / 5;
+  margin: 1%;
+}
+.div8 {
+  grid-area: 6 / 4 / 7 / 5;
+  margin: 1%;
+}
+.div9 {
+  grid-area: 7 / 4 / 8 / 5;
+  margin: 1%;
+}
+.div10 {
+  grid-area: 7 / 3 / 8 / 4;
+  margin: 1%;
+}
+.div11 {
+  grid-area: 7 / 2 / 8 / 3;
+  margin: 1%;
+}
+.div12 {
+  grid-area: 7 / 1 / 8 / 2;
+  margin: 1%;
+}
+.div13 {
+  grid-area: 6 / 1 / 7 / 2;
+  margin: 1%;
+}
+.div14 {
+  grid-area: 6 / 2 / 7 / 3;
+  margin: 1%;
+}
+.div15 {
+  grid-area: 6 / 3 / 7 / 4;
+  margin: 1%;
+}
+.div16 {
+  grid-area: 5 / 1 / 6 / 2;
+  margin: 1%;
+}
+.div17 {
+  grid-area: 5 / 2 / 6 / 3;
+  margin: 1%;
+}
+.div18 {
+  grid-area: 5 / 3 / 6 / 4;
+  margin: 1%;
+}
+.div19 {
+  grid-area: 4 / 1 / 5 / 2;
+  margin: 1%;
+}
+.div20 {
+  grid-area: 4 / 2 / 5 / 3;
+  margin: 1%;
+}
+.div21 {
+  grid-area: 4 / 3 / 5 / 4;
+  margin: 1%;
+}
+/* .div22 { grid-area: 2 / 1 / 3 / 2; }
+.div23 { grid-area: 2 / 2 / 3 / 3; }
+.div24 { grid-area: 2 / 3 / 3 / 5; } */
+
+.calcButton {
+  width: 100%;
+  height: 100%;
+  border-style: solid;
+  border-radius: 5px;
+  font-size: 2.2rem;
+  background-color: rgba(19, 2, 2, 0.934);
+  color: white;
+  font-weight: bold;
+}
+
+.calcButton:hover {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+.calcButton:active {
+  background-color: white;
+  color: black;
+}
+
+#display {
+  background-color: whitesmoke;
+  padding: 3%;
+  margin: 0;
+  color: black;
+  font-size: 30px;
+  border: 1px solid black;
+}
